crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_multiple.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
x <- 1
.ark_breakpoint(browser(), 1)
#line 2 "file:///test.R"
y <- 2
z <- 3
.ark_breakpoint(browser(), 2)
#line 4 "file:///test.R"
w <- 4
