crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_multiple_lists.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
x <- 1
f <- function() {
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 4 "file:///test.R"
  y <- 2
  z <- 3
}
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "2"))
#line 7 "file:///test.R"
w <- 4
}
