crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_on_blank_line_anchors_to_next.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
{
  x <- 1
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))

#line 4 "file:///test.R"
  y <- 2
}
