crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_on_closing_brace_with_valid_breakpoint.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
{
f <- function() {
  x <- 1
}
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "2"))
#line 5 "file:///test.R"
y <- 2
}
