crates/ark/src/snapshots/ark__console_annotate__tests__inject_breakpoints_with_line_offset.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
x <- 1
base::.ark_breakpoint(browser(), "file:///test.R", "1")
#line 12 "file:///test.R"
y <- 2
z <- 3
