crates/ark/src/snapshots/ark__console_annotate__tests__multiple_breakpoints_collapse_to_same_line.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
{
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))

#line 3 "file:///test.R"
  foo(
    1
  )
}
